src/infra-deploy/templates/apim.nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Azure region"
            }
        },
        "nsgName": {
            "type": "string",
            "defaultValue": ""
        },
        "nsgRuleInbound100Src": {
            "type": "string",
            "defaultValue": "",
            "metadata": {
                "displayName": "Source for dev/test inbound rule",
                "description": "Optional. If provided, a priority 100 rule will be created to allow inbound access from this source. Useful for dev/test/debug etc. but likely not appropriate to provide in production."
            }
        },
        "allowTrafficOnlyFromFrontDoor": {
            "type": "bool",
            "defaultValue": false,
            "metadata": {
                "description": "Specifies whether to allow traffic to API Management public endpoints only from Front Door."
            }
        }
    },
    "variables": {
        "rule100Name": "DevTestInbound",
        "apiVersionNet": "2020-07-01"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('apiVersionNet')]",
            "name": "[parameters('nsgName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    "[
                        if
                        (
                            empty(trim(parameters('nsgRuleInbound100Src'))),
                            json('null'),
                            createObject
                            (
                                'name', variables('rule100Name'),
                                'properties', createObject
                                (
                                    'protocol', '*',
                                    'sourcePortRange', '*',
                                    'destinationPortRange', '*',
                                    'sourceAddressPrefix', parameters('nsgRuleInbound100Src'),
                                    'destinationAddressPrefix', 'VirtualNetwork',
                                    'access', 'Allow',
                                    'priority', 100,
                                    'direction', 'Inbound',
                                    'sourcePortRanges', json('[]'),
                                    'destinationPortRanges', json('[]'),
                                    'sourceAddressPrefixes', json('[]'),
                                    'destinationAddressPrefixes', json('[]')
                                )
                            )
                        )
                    ]",
                    {
                        "name": "ApplicationInsightsAvailability",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80,443",
                            "sourceAddressPrefix": "ApplicationInsightsAvailability",
                            "destinationAddressPrefix": "Any",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ClientCommunicationToAPIManagementInbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "[if(parameters('allowTrafficOnlyFromFrontDoor'), 'AzureFrontDoor.Backend', 'Internet')]",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "SecureClientCommunicationToAPIManagementInbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "[if(parameters('allowTrafficOnlyFromFrontDoor'), 'AzureFrontDoor.Backend', 'Internet')]",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ManagementEndpointForAzurePortalAndPowershellInbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3443",
                            "sourceAddressPrefix": "ApiManagement",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "DependencyOnRedisCacheInbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6381-6383",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AzureInfrastructureLoadBalancer",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 180,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "DependencyOnAzureSQLOutbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Sql",
                            "access": "Allow",
                            "priority": 140,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "DependencyForLogToEventHubPolicyOutbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5671",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "EventHub",
                            "access": "Allow",
                            "priority": 150,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "DependencyOnRedisCacheOutbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "6381-6383",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 160,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "DependencyOnAzureFileShareForGitOutbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "445",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 170,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "PublishDiagnosticLogsAndMetricsOutbound",
                        "properties": {
                            "description": "APIM Logs and Metrics for consumption by admins and your IT team are all part of the management plane",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureMonitor",
                            "access": "Allow",
                            "priority": 185,
                            "direction": "Outbound",
                            "destinationPortRanges": [
                                "443",
                                "12000",
                                "1886"
                            ]
                        }
                    },
                    {
                        "name": "ConnectToSmtpRelayForSendingEmailsOutbound",
                        "properties": {
                            "description": "APIM features the ability to generate email traffic as part of the data plane and the management plane",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 190,
                            "direction": "Outbound",
                            "destinationPortRanges": [
                                "25",
                                "587",
                                "25028"
                            ]
                        }
                    },
                    {
                        "name": "AuthenticateToAzureActiveDirectoryOutbound",
                        "properties": {
                            "description": "Connect to Azure Active Directory for Developer Portal Authentication or for Oauth2 flow during any Proxy Authentication",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureActiveDirectory",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Outbound",
                            "destinationPortRanges": [
                                "80",
                                "443"
                            ]
                        }
                    },
                    {
                        "name": "DependencyOnAzureStorageOutbound",
                        "properties": {
                            "description": "APIM service dependency on Azure Blob and Azure Table Storage",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "PublishMonitoringLogsOutbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        }
    ]
}
